styles.css
body {
    font-family: Arial, sans-serif;
    background-color: #181818; /* Darker gray background */
    color: #ffffff;
    margin: 0px;
    padding: 15px;
    align-items: center;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1em;
    background-color: #282828; /* Slightly lighter gray for header */
    color: #ffffff;
}



.maintext {
    display: flex; /* Enable flexbox for vertical centering */
    flex-direction: row; /* Align items vertically */
    justify-content: center; /* Center vertically */
    align-items: center; /* Center horizontally */
    height: calc(100vh - 30px); /* Adjust height to take up remaining space */
    color:  #ffffff;
}

.github-icon {
    position: absolute;
    top: 30px; /* Adjust vertical position as needed */
    right: 35px; /* Adjust horizontal position as needed */
    display: inline-block;
    width: 30px; /* Adjust icon size as needed */
    height: 30px;
}

.github-icon img {
    width: 100%;
    height: 100%;
}

.Linkedin-icon {
    position: absolute;
    top: 30px; /* Adjust vertical position as needed */
    right: 75px; /* Adjust horizontal position as needed */
    display: inline-block;
    width: 35px; /* Adjust icon size as needed */
    height: 30px;
}

.Linkedin-icon img {
    width: 100%;
    height: 100%;
}

.hamburger-menu {
    display: none;
    cursor: pointer;
    width: 30px; /* Set a fixed width for the hamburger menu */
}

.hamburger-menu .bar {
    width: 100%; /* Make the bars take up the full width of the menu */
    height: 3px;
    background-color: #fff;
    margin: -1.2px;
}

/* Adjust margins for each bar except the last one */
.hamburger-menu .bar:not(:last-child) {
    margin-bottom: 4px;
}

.nav-links {
    list-style: none;
    display: flex;
    margin: 0;
    padding: 0;
}

.nav-links li {
    margin: 0 1em;
}

.nav-links a {
    text-decoration: none;
    color: #fff;
}

.show {
    display: flex !important;
}

.container {
    display: flex;
    flex-direction:row;
    flex-wrap:wrap;
    justify-content: center;
    gap: 100px;
    list-style-type: none;
    padding-top: 100px;
}

.box {
    background-color: rgb(98, 98, 98);
    color: rgb(255, 255, 255);
    padding: 20px;
    margin: 10px;
    text-align: center;
    flex: 1 1 calc(33.333% - 20px);
    box-sizing: border-box;
    border-radius: 25px;
    height: 250px;
    width: 350px;
    max-width: 350px;
}



@media (max-width: 869px) { /* Transition from smal to large, includes Hamburger menu */
    .hamburger-menu {
        display: block;
    }
    .nav-links {
        display: none;
        flex-direction: column;
        width: 100%;
    }
    .nav-links li {
        text-align: center;
        margin: 1em 0;
    }

    .box {
        flex:auto;
        height: 350px;
        width: 350px;
        max-width: 350px;


    }
}

@media (max-width: 860px) { /* Transition from smal to large, includes Hamburger menu */
    .hamburger-menu {
        display: block;
    }
    .nav-links {
        display: none;
        flex-direction: column;
        width: 100%;
    }
    .nav-links li {
        text-align: center;
        margin: 1em 0;
    }

    .box {
        flex:auto;
        height: 350px;
        width: 550px;
        max-width: 700px;
    }
    .container {
        gap: 10px;
        padding-top: 10px;
    }
}

@media (max-width: 770px) { /* Transition from smal to large, includes Hamburger menu */
    .hamburger-menu {
        display: block;
    }
    .nav-links {
        display: none;
        flex-direction: column;
        width: 100%;
    }
    .nav-links li {
        text-align: center;
        margin: 1em 0;
    }

    .box {
        flex:auto;
        height: 350px;
        width: 550px;
        max-width: 650px;


    }
}

@media (max-width: 450px) { /* Transition from smal to large, includes Hamburger menu */
    .hamburger-menu {
        display: block;
    }
    .nav-links {
        display: none;
        flex-direction: column;
        width: 100%;
    }
    .nav-links li {
        text-align: center;
        margin: 1em 0;
    }

    .box {
        flex:auto;
        height: 350px;
        width: 350px;
        max-width: 350px;
    }
    .container {
        gap: 10px;
        padding-top: 10px;
    }
}

@media (max-width: 375px) { /* Transition from smal to large, includes Hamburger menu */
    .hamburger-menu {
        display: block;
    }
    .nav-links {
        display: none;
        flex-direction: column;
        width: 100%;
    }
    .nav-links li {
        text-align: center;
        margin: 1em 0;
    }

    .box {
        flex:auto;
        height: 350px;
        width: 350px;
        max-width: 350px;
    }
    .container {
        gap: 10px;
        padding-top: 10px;
    }
}

